[package]
name = "side-channel-attacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = { git = "https://github.com/memflow/memflow", branch = "next", features = ["plugins"] }
clap = "2"
log = "0.4"
simple_logger = "1"
